                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 06-05-2005 changed: OnAction() now returns a bool.  It should be true if the action has been dealt with and
                        needs no further processing, and false if it hasn't been handled.
  - 06-05-2005 added: Check Xbox System-Clock at Startup (GeminiServer)
  - 05-05-2005 fixed: smoothness of NTSC video stored using 3:2 pulldown. Still plays at 24fps.. (dvdplayer)
  - 05-05-2005 fixed: aspectratio selection for dvdplayer
  - 05-05-2005 added: adjustable audio/video delay in dvdplayer
  - 05-05-2005 changed: Better discontinuity handling in dvdplayer
  - 05-05-2005 changed: Seek moved onto the right thumb stick - less clashes.
  - 05-05-2005 added: Code support for volume bar in video OSD audio submenu - needs skinning.
  - 05-05-2005 fixed: Videos Original Size view wasn't initialized properly.
  - 05-05-2005 changed: Scripts/Programs windows now use ViewControl.
  - 05-05-2005 added: Musepack codec to paplayer.
  - 05-05-2005 fixed: .m3u was detected as a valid underlying media file for .cue sheets
  - 05-05-2005 added: Seek bar enabled - move left/right on left thumb stick.
  - 05-05-2005 updated: Chinese (Simple) language file (Thnx to iikii)
  - 05-05-2005 updated: Polish language file (Thnx to napek)
  - 05-05-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 05-05-2005 changed: temp filename for audio scrobbler cache
  - 05-05-2005 fixed: archive class couldn't save very long strings
  - 05-05-2005 added: ogg codec for paplayer
  - 05-05-2005 fixed: subtitle/audiostream stream selection from xbmc osd in dvdplayer should now be working and remembered. 